Can connect to database and return info - working in Singleton

--- a/XUnitTestProject0/XUnitTestProject0.csproj
+++ b/XUnitTestProject0/XUnitTestProject0.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\proj0\proj0.csproj" />
+    <ProjectReference Include="..\StoreApplication\StoreApplication.csproj" />
   </ItemGroup>
 
 </Project>
