--- a/proj0/proj0.csproj
+++ b/proj0/proj0.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StoreApp.DbAccess\StoreApp.DbAccess.csproj" />
     <ProjectReference Include="..\StoreApplication\StoreApplication.csproj" />
   </ItemGroup>
 
